--- a/Estoque/Promises/index.html
+++ b/Estoque/Promises/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
+    <h1 id="cidade">
 
+
+    </h1>
     <script>
         // fetch('https://viacep.com.br/ws/28637000/json/')
         //     .then((response) => response.json())
@@ -17,11 +20,12 @@
 
 
 
-        async function buscarCep() {
+        async function buscarCep(cep) {
             try {
-                const response = await fetch('https://viacep.com.br/ws/28637000/json/')
+                const response = await fetch(`https://viacep.com.br/ws/${cep}/json/`)
                 const dados = await response.json()
                 console.log(dados)
+                document.getElementById('cidade').innerHTML = dados.localidade
             } catch (error) {
                 console.log('Diferente', error)
             }
