--- a/Jogo-da-Velha/index.html
+++ b/Jogo-da-Velha/index.html
@@ -8,61 +8,19 @@
     <title>Jogo da Velha</title>
 </head>
 
-    <div id="mostrador">
+   
         <h1>
             Jogo da Velha
         </h1>
        
-    </div>
-    <style type="text/css">
+   
+  
 
-        #mostrador{
-            margin: auto;
-            margin-top: 40px;
-            margin-bottom: 30px;
-            width: 252px
-        }
-
-        .espaco{
-            width: 80px;
-            height: 60px;
-            border: 2px solid #000;
-            float: left;
-            text-align: center;
-            padding-top: 20px;
-            
-        }
-
-        .tabuleiro{
-            margin: auto;
-            width: 252px;
-            height: 252px;
-        }
     </style>
 
 <body>
 
-    <div id="mostrador" >
-        <p style="float: left; margin-right: 10px;" > Vez do Jogador: </p>
-        <img src="imagens/x.png" border="0" height="50">
-    </div>
-
-    <div class="tabuleiro">
-        <div id="a1" class="espaco" jogada=""><img src="imagens/x.png" border="0" height="50"></div>
-        <div id="a2" class="espaco" jogada=""><img src="imagens/o.png" border="0" height="50"></div>
-        <div id="a3" class="espaco" jogada=""></div>
-
-        <div id="b1" class="espaco" jogada=""></div>
-        <div id="b2" class="espaco" jogada=""></div>
-        <div id="b3" class="espaco" jogada=""></div>
-
-        <div id="c1" class="espaco" jogada=""></div>
-        <div id="c2" class="espaco" jogada=""></div>
-        <div id="c3" class="espaco" jogada=""></div>
-
-    </div>
-
 </body>
-<script src="index.js"></script>
+<script type="text/javascript "src="index.js"></script>
 
 </html>
