--- a/Jogo-da-Velha/index.html
+++ b/Jogo-da-Velha/index.html
@@ -6,21 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Velha</title>
+    <style src="index.css"></style>
 </head>
 
-   
-        <h1>
-            Jogo da Velha
-        </h1>
-       
-   
-  
 
-    </style>
+
+<h1>
+    <center>Jogo da Velha</center>
+</h1>
+<center>
+    <table class="tabela">
+</center>
+<tr>
+    <td>0</td>
+    <td>1</td>
+    <td>2</td>
+</tr>
+<tr>
+    <td>3</td>
+    <td>4</td>
+    <td>5</td>
+
+</tr>
+<tr>
+    <td>6</td>
+    <td>7</td>
+    <td>8</td>
+
+</tr>
+
+
+</table>
+
+
+
+
+</styl>
 
 <body>
 
 </body>
-<script type="text/javascript "src="index.js"></script>
+<script type="text/javascript " src="index.js"></script>
+
 
 </html>
