--- a/Jogo-da-Forca/index.html
+++ b/Jogo-da-Forca/index.html
@@ -16,12 +16,15 @@
         let erros = 0
         const MAX_ERROS = 7
 
+
+
+
         function jogar(letra) {
-            if (typeof letra !== 'string') return console.log('Caractere inválido.')
+            if (typeof letra !== 'string') return console.log('Caractere inválido.') // se for diferente de STRING 
 
-            if (letra.length !== 1) return console.log('Error')
+            if (letra.length !== 1) return console.log('Error') // So pode colocar uma letra por vez
 
-            letra = letra.toUpperCase()
+            letra = letra.toUpperCase() // letra CAPSLOCK   
 
             if (erros >= MAX_ERROS - 1) return console.log('Jogador perdeu.')
 
@@ -38,9 +41,24 @@
 
             palavraUsuario[palavra.indexOf(letra)] = letra
 
+            // B E T E R R A B A
+
+            for (let i = 0; i < palavra.length; i++) {
+                const letras = palavra[i]
+                const indice = i
+
+                if (letra === palavra[i]) {
+                    palavraUsuario[i] = letra
+                }
+
+                console.log(letras, indice)
+
+            }
+
+
             console.log(palavraUsuario)
 
-            if (!palavraUsuario.some(valor => valor === '_')) {
+            if (!palavraUsuario.some(valor => valor === '_')) { // se a palavra não estiver nenhum valor '_'...
 
                 palavraUsuario = palavra.split('').fill('_')
                 letrasUsadas.length = 0
@@ -49,6 +67,7 @@
                 return console.log('Jogador Ganhou!')
 
             }
+
 
 
 
