Urna Eletronica Fazendo

--- a/Cronometro/index.html
+++ b/Cronometro/index.html
@@ -18,7 +18,7 @@
 
     <div class="btns">
         <button id="btn-start" onclick="start()" class="start-btn">Start</button>
-        <button id="btn-pause" onclick="pause()" class="pause-btn">Pause</button>
+        <button id="btn-pause" onclick="pause()" class="pause-btn">Stop</button>
         <button id="btn-reset" onclick="reset()" class="reset-btn">Reset</button>
     </div>
 
