--- a/UrnaEletronica/index.html
+++ b/UrnaEletronica/index.html
@@ -16,6 +16,10 @@
 <body>
 
     <center>
+        <div id="candidato"></div>
+        <div id="numero"></div>
+        <div id="partido"></div>
+        <div id="img"></div>
 
         <div class="corpo">
 
@@ -40,7 +44,7 @@
             </div>
             <div class="brancoCorrigirConfirmar">
                 <button id="btn-branco" class="btnBranco" onclick="branco()"><b>Branco</b></button>
-                <button id="btn-corrigir" class="btnCorrigir"><b>Corrigir</b></button>
+                <button id="btn-corrigir" class="btnCorrigir" onclick="corrigir()"><b>Corrigir</b></button>
                 <button id="btn-confirmar" class="btnConfirmar" onclick="confirmar()"><b>Confirmar</b></button>
 
             </div>
