Urna Eletronica quase pronta

--- a/UrnaEletronica/index.html
+++ b/UrnaEletronica/index.html
@@ -16,39 +16,45 @@
 <body>
 
     <center>
-        <div id="candidato"></div>
-        <div id="numero"></div>
-        <div id="partido"></div>
-        <div id="img"></div>
 
-        <div class="corpo">
+        <div class="divMae">
+            <div class="display">
+                <div id="candidato"></div>
+                <div id="numero"></div>
+                <div id="partido"></div>
+                <div id="img"></div>
+            </div>
 
-            <div>
-                <button id="btn-1" class="btnNum" value="1">1</button>
-                <button id="btn-2" class="btnNum" value="2">2</button>
-                <button id="btn-3" class="btnNum" value="3">3</button>
+            <div class="corpo">
+                <div>
+                    <button id="btn-1" class="btnNum" value="1">1</button>
+                    <button id="btn-2" class="btnNum" value="2">2</button>
+                    <button id="btn-3" class="btnNum" value="3">3</button>
 
-            </div>
-            <div>
-                <button id="btn-4" class="btnNum" value="4">4</button>
-                <button id="btn-5" class="btnNum" value="5">5</button>
-                <button id="btn-6" class="btnNum" value="6">6</button>
-            </div>
-            <div>
-                <button id="btn-7" class="btnNum" value="7">7</button>
-                <button id="btn-8" class="btnNum" value="8">8</button>
-                <button id="btn-9" class="btnNum" value="9">9</button>
-            </div>
-            <div>
-                <button id="btn-0" class="btnNum" value="0">0</button>
-            </div>
-            <div class="brancoCorrigirConfirmar">
-                <button id="btn-branco" class="btnBranco" onclick="branco()"><b>Branco</b></button>
-                <button id="btn-corrigir" class="btnCorrigir" onclick="corrigir()"><b>Corrigir</b></button>
-                <button id="btn-confirmar" class="btnConfirmar" onclick="confirmar()"><b>Confirmar</b></button>
+                </div>
+                <div>
+                    <button id="btn-4" class="btnNum" value="4">4</button>
+                    <button id="btn-5" class="btnNum" value="5">5</button>
+                    <button id="btn-6" class="btnNum" value="6">6</button>
+                </div>
+                <div>
+                    <button id="btn-7" class="btnNum" value="7">7</button>
+                    <button id="btn-8" class="btnNum" value="8">8</button>
+                    <button id="btn-9" class="btnNum" value="9">9</button>
+                </div>
+                <div>
+                    <button id="btn-0" class="btnNum" value="0">0</button>
+                </div>
+                <div class="brancoCorrigirConfirmar">
+                    <button id="btn-branco" class="btnBranco" onclick="branco()"><b>Branco</b></button>
+                    <button id="btn-corrigir" class="btnCorrigir" onclick="corrigir()"><b>Corrigir</b></button>
+                    <button id="btn-confirmar" class="btnConfirmar" onclick="confirmar()"><b>Confirmar</b></button>
 
+                </div>
             </div>
+
         </div>
+
     </center>
 
 </body>
