--- a/UrnaEletronica/index.html
+++ b/UrnaEletronica/index.html
@@ -22,6 +22,8 @@
                 <div id="candidato"></div>
                 <div id="numero"></div>
                 <div id="partido"></div>
+                <div id="votoBranco"></div>
+                <div id="votoAnulado"></div>
                 <div id="img"></div>
             </div>
 
@@ -50,15 +52,7 @@
                     <button id="btn-corrigir" class="btnCorrigir" onclick="corrigir()"><b>Corrigir</b></button>
                     <button id="btn-confirmar" class="btnConfirmar" onclick="confirmar()"><b>Confirmar</b></button>
 
-                </div>
-            </div>
+                </div </div> </div> </center> </body> <script src="/UrnaEletronica/index.js">
+                </script>
 
-        </div>
-
-    </center>
-
-</body>
-
-<script src="/UrnaEletronica/index.js"></script>
-
-</html>
+                </html>
